# Deus

./: CMakeLists.txt  azure-pipelines.yml  build.bat  configure.bat
cmake/: stm32l4.cmake
src/: main.c  main.h  stm32l4xx_hal_conf.h  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c
